@@ -14,4 +14,16 @@
             <field name="code">terminate_contract</field>
         </record>
     </data>
+    <data depends="event_log">
+        <record model="ir.action.act_window" id="act_event_log_relate_form">
+            <field name="name">Event Logs</field>
+            <field name="res_model">event.log</field>
+            <field name="domain">[('object_', '=', ('contract',Eval('active_id')))]</field>
+        </record>
+        <record model="ir.action.keyword" id="act_event_log_relate_keyword">
+            <field name="keyword">form_relate</field>
+            <field name="model">contract,-1</field>
+            <field name="action" ref="act_event_log_relate_form"/>
+        </record>
+    </data>
 </tryton>
