@@ -1,3 +1,5 @@
+* Add relate to event logs from contract if the module is installed
+
 Version 1.3 - 2015-01-22
 * Centralize calculate method
 * Add automatic calculation of end_dates
